[package]
name = "usnet"
version = "0.1.0"
authors = ["Maximilian Hristache <mhristache@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.23.0"
serde_yaml = "0.8"
serde = {version = "1", features = ["derive"]}
log = "0.4"
env_logger = "0.7"
ipnetwork = "0.15.0"
af_packet = "0.3.0"